--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,15 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "target": "es2020",
+    "useDefineForClassFields": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "strict": true,
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {"@/*": ["src/*"]},
+    "types": ["node", "vite/client"],
+    "skipLibCheck": true,
+  },
+  "include": ["src", "vite.config.ts"]
 }
